<resources>
    <string name="app_name">SParking</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="nav_menu_icon_description">Menu Icon</string>
    <string name="map">Maps</string>
    <string name="manage_cars">Manage Cars</string>
    <string name="payment">Payment</string>
    <string name="promotion">Promotion</string>
    <string name="title_activity_login">Sign in</string>
    <string name="calculating">0.0 km</string>
    <string name="default_empty_slots">0</string>
    <string name="default_total_slots">0</string>
    <string name="default_parking_name">Địa điểm đỗ 103</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Phone number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
