<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_manage_cars"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/manage_cars" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_promotion"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/promotion" />
    </group>
</menu>
